--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
         </div>
       </div>
     </footer>
-
+    <!-- Модальное окно -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="close-button" data-modal-close>
@@ -397,6 +397,36 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+
+        <p>Оставьте свои данные, мы вам перезвоним</p>
+
+        <form class="form">
+          <div class="form-field">
+            <label for="user-name">Имя</label> <input type="text" name="name" id="user-name" />
+          </div>
+
+          <div class="form-field">
+            <label for="tel">Телефон</label> <input type="tel" name="tel" id="tel" />
+          </div>
+
+          <div class="form-field">
+            <label for="mail">Почта</label> <input type="email" name="mail" id="mail" />
+          </div>
+
+          <div class="form-field">
+            <label for="comment">Комментарий</label>
+            <textarea name="comment" id="comment" rows="10" placeholder="Введите текст"></textarea>
+          </div>
+
+          <div class="form-field">
+            <input type="checkbox" name="check" id="check" />
+            <label for="check">
+              Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
+            </label>
+          </div>
+
+          <button type="submit">Submit</button>
+        </form>
       </div>
     </div>
 
