--- a/index.html
+++ b/index.html
@@ -387,6 +387,15 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <form>
+            <div class="form-field">
+              <label for="user-name">Имя</label> <input type="text" name="name" id="user-name" />
+            </div>
+
+            <button type="submit" class="submit-button">Отправить</button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- Модальное окно -->
@@ -425,7 +434,7 @@
             </label>
           </div>
 
-          <button type="submit">Submit</button>
+          <button type="submit" class="submit-button">Отправить</button>
         </form>
       </div>
     </div>
