--- a/index.html
+++ b/index.html
@@ -340,12 +340,12 @@
         </div>
       </section>
     </main>
+    <!-- Футер -->
     <footer class="footer">
       <div class="container footer-container">
+        <!-- Лого и адреса компании -->
         <div>
-          <!-- Лого компании -->
           <a class="logo logo-footer" href="/">Web<span class="logo-foot">Studio</span> </a>
-          <!-- Адреса компании -->
           <address>
             <ul class="adress-list-footer">
               <li><a class="address-foot" href="/">г. Киев, пр-т Леси Украинки, 26</a></li>
@@ -354,6 +354,7 @@
             </ul>
           </address>
         </div>
+        <!-- Ссылки социальных сетей -->
         <div class="footer-soc-links-container">
           <h3 class="footer-soc-text">Присоединяйтесь</h3>
           <ul class="footer-soc-list">
@@ -387,15 +388,18 @@
             </li>
           </ul>
         </div>
-        <div class="footer-form">
-          <form>
-            <div class="form-field">
-              <label for="user-name">Имя</label> <input type="text" name="name" id="user-name" />
+        <!-- Формы -->
+        <form class="footer-form-container">
+          <div>
+            <p class="footer-form-caption">Подпишитесь на рассылку</p>
+            <div class="footer-form-field">
+              <input type="email" name="mail" id="footer-mail" placeholder="E-mail" />
             </div>
-
-            <button type="submit" class="submit-button">Отправить</button>
-          </form>
-        </div>
+          </div>
+          <div>
+            <button type="submit" class="footer-submit-button">Подписаться</button>
+          </div>
+        </form>
       </div>
     </footer>
     <!-- Модальное окно -->
@@ -407,30 +411,59 @@
           </svg>
         </button>
 
-        <p>Оставьте свои данные, мы вам перезвоним</p>
-
         <form class="form">
+          <p class="form-caption">Оставьте свои данные, мы вам перезвоним</p>
           <div class="form-field">
-            <label for="user-name">Имя</label> <input type="text" name="name" id="user-name" />
+            <label for="user-name">Имя</label>
+            <input class="form-input" type="text" name="name" id="user-name" />
+            <span class="form-icon">
+              <svg width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </span>
           </div>
 
           <div class="form-field">
-            <label for="tel">Телефон</label> <input type="tel" name="tel" id="tel" />
+            <label for="tel">Телефон</label>
+            <input class="form-input" type="tel" name="tel" id="tel" />
+            <span class="form-icon">
+              <svg width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </span>
           </div>
 
           <div class="form-field">
-            <label for="mail">Почта</label> <input type="email" name="mail" id="mail" />
+            <label for="mail">Почта</label>
+            <input class="form-input" type="email" name="mail" id="mail" />
+            <span class="form-icon">
+              <svg width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </span>
           </div>
 
           <div class="form-field">
             <label for="comment">Комментарий</label>
-            <textarea name="comment" id="comment" rows="10" placeholder="Введите текст"></textarea>
+            <textarea
+              class="form-text"
+              name="comment"
+              id="comment"
+              rows="10"
+              placeholder="Введите текст"
+            ></textarea>
           </div>
 
           <div class="form-field">
-            <input type="checkbox" name="check" id="check" />
-            <label for="check">
-              Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
+            <label class="checkbox-label">
+              <input type="checkbox" name="check" id="check" />
+              <span class="checkbox-icon">
+                <svg width="16" height="15">
+                  <use href="./images/icons.svg#icon-icon-check"></use>
+                </svg>
+              </span>
+              Соглашаюсь с рассылкой и принимаю
+              <a href="" class="checkbox-link">Условия договора</a>
             </label>
           </div>
 
