--- a/index.html
+++ b/index.html
@@ -342,46 +342,50 @@
     </main>
     <!-- Футер -->
     <footer class="footer">
-      <div class="container footer-container">
+      <div class="footer__section container">
         <!-- Лого и адреса компании -->
         <div>
-          <a class="logo logo-footer" href="/">Web<span class="logo-foot">Studio</span> </a>
+          <a class="logo footer__logo" href="/"
+            >Web<span class="footer__logo--inverse">Studio</span>
+          </a>
           <address>
-            <ul class="adress-list-footer">
-              <li><a class="address-foot" href="/">г. Киев, пр-т Леси Украинки, 26</a></li>
-              <li><a class="contacts-foot" href="mailto:info@example.com">info@example.com</a></li>
-              <li><a class="contacts-foot" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <ul class="footer__list">
+              <li><a class="footer__address" href="/">г. Киев, пр-т Леси Украинки, 26</a></li>
+              <li>
+                <a class="footer__contacts" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li><a class="footer__contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
           </address>
         </div>
         <!-- Ссылки социальных сетей -->
-        <div class="footer-soc-links-container">
-          <h3 class="footer-soc-text">Присоединяйтесь</h3>
-          <ul class="footer-soc-list">
-            <li class="footer-soc-li">
-              <a href="" class="footer-soc-link">
-                <svg class="footer-soc-icon" width="20" height="20">
+        <div class="footer__soc-links">
+          <h3 class="soc-links__caption">Присоединяйтесь</h3>
+          <ul class="soc-links__list">
+            <li class="soc-links__item">
+              <a href="" class="soc-link__link">
+                <svg class="soc-link__icon--footer" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-soc-li">
-              <a href="" class="footer-soc-link">
-                <svg class="footer-soc-icon" width="20" height="20">
+            <li class="soc-links__item">
+              <a href="" class="soc-link__link">
+                <svg class="soc-link__icon--footer" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-soc-li">
-              <a href="" class="footer-soc-link">
-                <svg class="footer-soc-icon" width="20" height="20">
+            <li class="soc-links__item">
+              <a href="" class="soc-link__link">
+                <svg class="soc-link__icon--footer" width="20" height="20">
                   <use href="./images/icons.svg#icon-fb"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-soc-li">
-              <a href="" class="footer-soc-link">
-                <svg class="footer-soc-icon" width="20" height="20">
+            <li class="soc-links__item">
+              <a href="" class="soc-link__link">
+                <svg class="soc-link__icon--footer" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -389,69 +393,72 @@
           </ul>
         </div>
         <!-- Формы -->
-        <form class="footer-form-container">
+        <form class="footer__form">
           <div>
-            <p class="footer-form-caption">Подпишитесь на рассылку</p>
-            <div class="footer-form-field">
-              <input type="email" name="mail" id="footer-mail" placeholder="E-mail" />
-            </div>
+            <p class="footer__form--caption">Подпишитесь на рассылку</p>
+            <input
+              class="footer__input"
+              type="email"
+              name="mail"
+              id="footer-mail"
+              placeholder="E-mail"
+            />
           </div>
-          <div>
-            <button type="submit" class="footer-submit-button">
-              Подписаться
-              <svg class="submit-button_icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-icon-send"></use>
-              </svg>
-            </button>
-          </div>
+          <button type="submit" class="footer__submit-button">
+            Подписаться
+            <svg class="submit-button__icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-icon-send"></use>
+            </svg>
+          </button>
         </form>
       </div>
     </footer>
     <!-- Модальное окно -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="close-button" data-modal-close>
+        <button class="modal__close-button" data-modal-close>
           <svg width="18" height="18">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
 
         <form class="form">
-          <p class="form-caption">Оставьте свои данные, мы вам перезвоним</p>
-          <div class="form-field">
-            <label for="user-name">Имя</label>
-            <input class="form-input" type="text" name="name" id="user-name" />
-            <span class="form-icon">
+          <p class="form__caption">Оставьте свои данные, мы вам перезвоним</p>
+
+          <label class="form__label--style" for="user-name">Имя</label>
+          <div class="form__field">
+            <input class="form__input" type="text" name="name" id="user-name" />
+            <span class="form__icon">
               <svg width="18" height="18">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </span>
           </div>
 
-          <div class="form-field">
-            <label for="tel">Телефон</label>
-            <input class="form-input" type="tel" name="tel" id="tel" />
-            <span class="form-icon">
+          <label class="form__label--style" for="tel">Телефон</label>
+          <div class="form__field">
+            <input class="form__input" type="tel" name="tel" id="tel" />
+            <span class="form__icon">
               <svg width="18" height="18">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </span>
           </div>
 
-          <div class="form-field">
-            <label for="mail">Почта</label>
-            <input class="form-input" type="email" name="mail" id="mail" />
-            <span class="form-icon">
+          <label class="form__label--style" for="mail">Почта</label>
+          <div class="form__field">
+            <input class="form__input" type="email" name="mail" id="mail" />
+            <span class="form__icon">
               <svg width="18" height="18">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </span>
           </div>
 
-          <div class="form-field">
-            <label for="comment">Комментарий</label>
+          <label class="form__label--style" for="comment">Комментарий</label>
+          <div class="form__field">
             <textarea
-              class="form-text"
+              class="form__text"
               name="comment"
               id="comment"
               rows="10"
@@ -461,14 +468,10 @@
 
           <div class="check-container">
             <label class="check">
-              <input class="check_input" type="checkbox" name="check" />
-              <span class="check_icon">
-                <svg width="16" height="15">
-                  <use href="./images/icons.svg#icon-check"></use>
-                </svg>
-              </span>
+              <input class="check__input--hidden" type="checkbox" name="check" />
+              <span class="check__icon"> </span>
               Соглашаюсь с рассылкой и принимаю
-              <a href="" class="check_link">Условия договора</a>
+              <a href="" class="check__link">Условия договора</a>
             </label>
           </div>
 
