--- a/index.html
+++ b/index.html
@@ -23,34 +23,34 @@
   <body>
     <header>
       <!-- Навигация -->
-      <div class="container header-container">
-        <nav class="nav">
-          <a class="logo-header" href="/">Web<span class="logo-top">Studio</span></a>
-          <ul class="nav-list">
+      <div class="section header--position">
+        <nav class="header__nav">
+          <a class="header__logo" href="/">Web<span class="header__logo--accent">Studio</span></a>
+          <ul class="header__nav-list">
             <li>
-              <a class="current-nav-item" href="index.html">Студия</a>
+              <a class="nav-list__link--current" href="index.html">Студия</a>
             </li>
             <li>
-              <a class="nav-item" href="portfolio.html">Портфолио</a>
+              <a class="nav-list__item" href="portfolio.html">Портфолио</a>
             </li>
             <li>
-              <a class="nav-item" href="/">Контакты</a>
+              <a class="nav-list__item" href="/">Контакты</a>
             </li>
           </ul>
         </nav>
         <!-- Контакты -->
-        <ul class="contacts-top-list">
+        <ul class="header__contacts-list">
           <li>
-            <a class="contacts-top" href="mailto:info@devstudio.com">
-              <svg class="mail-icon-top" width="16" height="12">
+            <a class="contacts-list__item" href="mailto:info@devstudio.com">
+              <svg class="contacts-list__icon--mail" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelop"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
           <li>
-            <a class="contacts-top" href="tel:+380961111111">
-              <svg class="phone-icon-top" width="10" height="16">
+            <a class="contacts-list__item" href="tel:+380961111111">
+              <svg class="contacts-list__icon--phone" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphon"></use>
               </svg>
               +38 096 111 11 11</a
@@ -62,14 +62,14 @@
     <main>
       <!-- Секция 1 эффективное решение бизнеса-->
       <section class="hat">
-        <div class="container hat-container">
+        <div class="section hat-container">
           <h1 class="hat-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hat-button" type="button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
       <!-- Секция 2 Особенности компании -->
       <section class="descriptions">
-        <div class="container">
+        <div class="section">
           <h2 hidden>Особенности компании</h2>
           <ul class="description-list">
             <li class="description-item">
@@ -291,7 +291,7 @@
       <!-- Постоянные клиенты -->
 
       <section class="clients">
-        <div class="container">
+        <div class="section">
           <h2 class="clients-title">Постоянные клиенты</h2>
           <ul class="clients-list">
             <li class="client-li">
@@ -342,7 +342,7 @@
     </main>
     <!-- Футер -->
     <footer class="footer">
-      <div class="footer__section container">
+      <div class="footer__section section">
         <!-- Лого и адреса компании -->
         <div>
           <a class="logo footer__logo" href="/"
